--- a/src/app/components/Sticker/Sticker.scss
+++ b/src/app/components/Sticker/Sticker.scss
@@ -53,7 +53,7 @@
     // }
 
     &.melon-sticker {
-      bottom: -30px !important;
+      bottom: -50px !important;
       right: 50px !important;
     }
 
