--- a/src/app/pages/FAQ/FAQ.scss
+++ b/src/app/pages/FAQ/FAQ.scss
@@ -34,4 +34,36 @@
       transform: rotate(-30deg);
     }
   }
+
+  @media (min-width: $desktop-breakpoint) {
+    #apricot-container {
+      display: flex;
+      position: absolute;
+      align-items: baseline;
+      justify-content: center;
+      gap: 10%;
+      bottom: -5%;
+      width: calc(100% - 2 * $main-padding-desktop-inline);
+      z-index: 3;
+
+      .apricot {
+        transform: rotate(-10deg) translateX(20%);
+
+        &#apricot-3 {
+          height: 15%;
+          width: 15%;
+        }
+
+        &#apricot-4 {
+          height: 20%;
+          width: 20%;
+        }
+
+        &#apricot-5 {
+          height: 25%;
+          width: 25%;
+        }
+      }
+    }
+  }
 }
